grammars/weidu-baf/test/corpus/samples.txt
================================================================================
ar0602
================================================================================

IF
  Global("g_bg2_bags","MYAREA",0)
THEN
  RESPONSE #100
    SetGlobal("g_bg2_bags","MYAREA",1)
//    %action_bg2_bags%
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (line_comment)
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
aram00
================================================================================

IF
  Global("wm_bg1bear", "GLOBAL", 0)
  PartyHasItem("wm_bear")
THEN
  RESPONSE #100
    TakePartyItem("wm_bear")
    DestroyItem("wm_bear")
    SetGlobal("wm_bg1bear", "GLOBAL", 1)
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
baldur_add
================================================================================

/*
    If PC is a non-Lawful Wild Mage, he spontaneously casts a spell when he loses 50% of his hitpoints.
*/

IF
  Global("wm_spellshaper", "GLOBAL", 0)
  !Alignment(Player1, MASK_LAWFUL)
  Class(Player1, MAGE)
  Kit(Player1, 0)
  HPPercentLT(Player1, 51)
  NotStateCheck(Player1, STATE_HELPLESS)
  NotStateCheck(Player1, STATE_STUNNED)
  NotStateCheck(Player1, STATE_PANIC)
  NotStateCheck(Player1, STATE_BERSERK)
  NotStateCheck(Player1, STATE_SLEEPING)
  NotStateCheck(Player1, STATE_CHARMED)
  NotStateCheck(Player1, STATE_CONFUSED)
THEN
  RESPONSE #100
    ActionOverride(Player1, ForceSpell(LastAttackerOf(Myself), WIZARD_LARLOCH_MINOR_DRAIN))
    SmallWait(15)
    SetGlobal("wm_spellshaper", "GLOBAL", 1)
    ActionOverride(Player1, StartDialog("WM_LEVEL", Myself))
END

--------------------------------------------------------------------------------

(source_file
  (comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (call_expr
              func: (identifier)
              args: (call_expr
                func: (identifier)
                args: (identifier))
              args: (identifier))))
        (action
          call: (call_expr
            func: (identifier)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (call_expr
              func: (identifier)
              args: (string)
              args: (identifier))))))))

================================================================================
baldur
================================================================================

//-------------------------------
// After Resting: Rhialto appears
//-------------------------------

IF
  Global("wm_start", "GLOBAL", 0)
  Global("wm_bg1book", "GLOBAL", 0)   // Do not appear in BG2 if already appeared in BG1 part
  Global("wm_bg1bear", "GLOBAL", 0)   // Do not appear in BG2 if already appeared in BG1 part
  GlobalGT("Chapter", "GLOBAL", 0)
  PartyRested()
  AreaType(OUTDOOR)
//  Class(Player1,MAGE)
//  Kit(Player1,WILDMAGE)
THEN
  RESPONSE #100
    ActionOverride(Player1, CreateCreature("wm_rhia1", [-1.-1], 0))
    SetGlobal("wm_start", "GLOBAL", 1)
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier))))
    (line_comment)
    (line_comment)
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (call_expr
              func: (identifier)
              args: (string)
              args: (point
                (number)
                (number))
              args: (number))))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
candle
================================================================================

IF
  Global("g_bags","MYAREA",0)
THEN
  RESPONSE #100
    SetGlobal("g_bags","MYAREA",1)
    CreateCreature("g_bags",[2900.2900],8)
END

--------------------------------------------------------------------------------

(source_file
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (point
              (number)
              (number))
            args: (number)))))))

================================================================================
candlekeep
================================================================================

// Pansy mode: Rhialto waits outside Candlekeep's walls.

IF
  Global("wm_start", "GLOBAL", 0)
  GlobalGT("Chapter", "GLOBAL", 0)
THEN
  RESPONSE #100
    CreateCreature("wm_rhia1", [200.3200], 0)
    SetGlobal("wm_start", "GLOBAL", 1)
END

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (point
              (number)
              (number))
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))))))

================================================================================
detection
================================================================================

// normal detection
IF
  Detected([ANYONE])
  // %is_active%
THEN
  RESPONSE #100
    SetGlobal("%trap_var_base%_detected", "MYAREA", 1)
    Continue()
END

// instant detection
IF
  // %traps_baf_instant_toggle%
  Global("%trap_var_base%_detected", "MYAREA", 0)
  // %is_active%
  // %traps_baf_class%
  // %traps_baf_range%
  !StateCheck(LastSeenBy, CD_STATE_NOTVALID)
  !CheckStatLT(LastSeenBy, %detection%, TRAPS)
  TriggerOverride(LastSeenBy, ModalState(DETECTTRAPS))
  ActionListEmpty()
THEN
  RESPONSE #1
    ReallyForceSpellRES("%trap_spl%", Myself)
    SetGlobal("%trap_var_base%_detected", "MYAREA", 1)
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier)))))
    (line_comment)
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (line_comment)
      (line_comment)
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (variable_ref)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (call_expr
            func: (identifier)
            args: (identifier))))
      (condition
        call: (call_expr
          func: (identifier))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (identifier)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
displaystring
================================================================================

// Display detected trap type
IF
  Global("%trap_var_base%_detected", "MYAREA", 1) // has been detected with thief's skill
  Global("%trap_var_base%_disarmed", "MYAREA", 0) // hasn't been disarmed or set off
  !GlobalTimerNotExpired("%trap_var_base%_timer", "MYAREA") // don't spam the dialog box
  // %is_active%
  // %traps_baf_combat%
  Detect([PC])
  // %traps_baf_range%
  ActionListEmpty()
THEN
  RESPONSE #100
    SetGlobalTimer("%trap_var_base%_timer", "MYAREA", %notification_delay%)
    // Using a minion for DisplayString allows to put the notification into the center of the trap.
    // If calling DisplayString directly from trap script, it's off, and sometimes very much off, misleading the player.
    CreateCreatureImpassableAllowOverlap("%traps_minion_notification%", [%x%.%y%], 0)
    DisplayStringNoNameHead("%traps_minion_notification%", ~%trap_warning_string%~)
    // %ee_trap_type_string_delay% // On EE, DisplayStringNoNameHead disappears nearly instantly
    ActionOverride("%traps_minion_notification%", DestroySelf())
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)))
      (line_comment)
      (line_comment)
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier))))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (variable_ref)))
        (line_comment)
        (line_comment)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (point
              (variable_ref)
              (variable_ref))
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)))
        (line_comment)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (call_expr
              func: (identifier))))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
intuition
================================================================================

// intuition main action
IF
  Global("%trap_var_base%_detected", "MYAREA", 0)
  Global("%trap_var_base%_disarmed", "MYAREA", 0)
  !GlobalTimerNotExpired("%intuition_timer%", "MYAREA") // don't spam the actions
  // %is_active%
  // %traps_baf_combat%
  Detect([PC])
  // %traps_baf_range%
  !StateCheck(LastSeenBy, CD_STATE_NOTVALID)
  ActionListEmpty()
THEN
  RESPONSE #1
    SetGlobal("%trap_var_base%_intuition", "MYAREA", 1)
    // SetGlobalTimer("%intuition_timer%", "MYAREA", %intuition_delay%)
    Continue()
END

// intuition: character strings
IF
  Global("%trap_var_base%_intuition", "MYAREA", 1)
  ActionListEmpty()
THEN
  RESPONSE #1
    DisplayStringHead(LastSeenBy, @3)
    Continue()
  RESPONSE #1
    DisplayStringHead(LastSeenBy, @4)
    Continue()
  RESPONSE #1
    DisplayStringHead(LastSeenBy, @5)
    Continue()
  RESPONSE #1
    DisplayStringHead(LastSeenBy, @6)
    Continue()
  RESPONSE #1
    DisplayStringHead(LastSeenBy, @7)
    Continue()
  RESPONSE #1
    DisplayStringHead(LastSeenBy, @8)
    Continue()
  RESPONSE #1
    DisplayStringHead(LastSeenBy, @9)
    Continue()
END

// intuition: center
IF
  Global("%trap_var_base%_intuition", "MYAREA", 1)
THEN
  RESPONSE #1
    // %traps_baf_view%
    Continue()
END

// intuition: sound
IF
  // %traps_baf_sound_toggle%
  Global("%trap_var_base%_intuition", "MYAREA", 1)
THEN
  RESPONSE #1
    PlaySound("act_09")
    Continue()
END

// intuition: autopause
IF
  // %traps_baf_pause_toggle%
  Global("%trap_var_base%_intuition", "MYAREA", 1)
  !GlobalTimerNotExpired("%pause_timer%", "GLOBAL") // don't spam pause, global timer in case there's multiple traps in sight
THEN
  RESPONSE #1
    // SetGlobalTimer("%pause_timer%", "GLOBAL", %pause_delay%)
    ActionOverride(LastSeenBy, PauseGame()) // interrupts player orders
    Continue()
END

// intuition: start searching for traps - after pause because pausing interrupts modal actions too
IF
  // %traps_baf_force_find_traps_toggle%
  Global("%trap_var_base%_intuition", "MYAREA", 1)
  Global("%trap_var_base%_detected", "MYAREA", 0)
  // %traps_baf_class%
  // %traps_baf_range%
  // %is_active%
  !StateCheck(LastSeenBy, CD_STATE_NOTVALID)
  // !CheckStatLT(LastSeenBy, %detection%, TRAPS)
  !TriggerOverride(LastSeenBy, ModalState(DETECTTRAPS))
  // we don't want thieves coming out of stealth automatically, there could be enemies present
  !TriggerOverride(LastSeenBy, ModalState(STEALTH))
THEN
  RESPONSE #1
    ActionOverride(LastSeenBy, FindTraps())
    Continue()
END

// end intuition
IF
  Global("%trap_var_base%_intuition", "MYAREA", 1)
THEN
  RESPONSE #1
    SetGlobal("%trap_var_base%_intuition", "MYAREA", 0)
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)))
      (line_comment)
      (line_comment)
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier))))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (line_comment)
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (tra_ref)))
        (action
          call: (call_expr
            func: (identifier))))
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (tra_ref)))
        (action
          call: (call_expr
            func: (identifier))))
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (tra_ref)))
        (action
          call: (call_expr
            func: (identifier))))
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (tra_ref)))
        (action
          call: (call_expr
            func: (identifier))))
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (tra_ref)))
        (action
          call: (call_expr
            func: (identifier))))
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (tra_ref)))
        (action
          call: (call_expr
            func: (identifier))))
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (tra_ref)))
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number))))
    then: (then_clause
      (response
        weight: (number)
        (line_comment)
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)))
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string))))
    (line_comment)
    then: (then_clause
      (response
        weight: (number)
        (line_comment)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (call_expr
              func: (identifier))))
        (line_comment)
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (line_comment)
      (line_comment)
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (identifier)))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (call_expr
            func: (identifier)
            args: (identifier))))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)
          args: (call_expr
            func: (identifier)
            args: (identifier)))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (call_expr
              func: (identifier))))
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
jumpout
================================================================================

// Automatically jump out of backpack if directed to do so.
// Goes to baldur/baldur25.bcs.

IF
    Global("g_FamiliarJumpOut", "GLOBAL", 1)
    Global("g_FamStayInPack", "GLOBAL", 0)
    HasItem("%fam_item%", Player1)
    Delay(12)  // check every 2 rounds
    CombatCounterLT(1)
    !OnScreen([EVILCUTOFF])
    NextTriggerObject(Player1)
    !Detect([EVILCUTOFF])
THEN
    RESPONSE #100
        TakePartyItem("%fam_item%")
        DestroyItem("%fam_item%")
        MoveGlobalObject("%death_var%", Player1)
        Continue()
END

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (number)))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier))))
      (condition
        call: (call_expr
          func: (identifier)
          args: (identifier)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier)))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (identifier)))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
main
================================================================================

//Start warning again when reset
IF
  Reset([ANYONE])
THEN
  RESPONSE #100
    SetGlobal("%trap_var_base%_disarmed", "MYAREA", 0)
    Continue()
END

//Stop warning when fired
IF
  OR(3)
    Disarmed([ANYONE])
    Opened([ANYONE])  // for containers
    Entered([ANYONE])  // for regions
THEN
  RESPONSE #100
    SetGlobal("%trap_var_base%_disarmed", "MYAREA", 1)
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier)))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier))))))
  (line_comment)
  (block
    if: (if_clause
      (or_marker
        count: (number))
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier))))
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier))))
      (line_comment)
      (condition
        call: (call_expr
          func: (identifier)
          args: (object_ref
            (identifier)))))
    (line_comment)
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
stats
================================================================================

IF
  Global("g_tomes","MYAREA",0)
  Global("endofbg1","GLOBAL",0)
THEN
  RESPONSE #100
    ActionOverride(PLAYER1,ReallyForceSpellRES("g_tomes", Myself))
    SetGlobal("g_tomes","MYAREA",1)
    Continue()
END

--------------------------------------------------------------------------------

(source_file
  (block
    if: (if_clause
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number)))
      (condition
        call: (call_expr
          func: (identifier)
          args: (string)
          args: (string)
          args: (number))))
    then: (then_clause
      (response
        weight: (number)
        (action
          call: (call_expr
            func: (identifier)
            args: (identifier)
            args: (call_expr
              func: (identifier)
              args: (string)
              args: (identifier))))
        (action
          call: (call_expr
            func: (identifier)
            args: (string)
            args: (string)
            args: (number)))
        (action
          call: (call_expr
            func: (identifier)))))))

================================================================================
thalantyr
================================================================================

/* Do not edit. This file is generated from thalantyr.tbaf. Make your changes there and regenerate this file. */

IF
  Trigger(1)
  Global("g_melicamp_sequence", "GLOBAL", 0)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_sequence", "GLOBAL", 1)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 1)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 1)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 2)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 2)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 3)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 3)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 4)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 4)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 5)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 5)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 6)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 6)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 7)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 7)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 8)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 8)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 9)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 9)
END

IF
  Global("g_melicamp_sequence", "GLOBAL", 1)
  Global("g_melicamp_roll", "GLOBAL", 0)
  RandomNum(10, 10)
THEN
  RESPONSE #100
    SetGlobal("g_melicamp_roll", "GLOBAL", 10)
END
